# CodeReview-Assistant

./: LICENSE  README.md  codellama_cra_3.py  codellama_qlora_cra_3_ver_2_0.ipynb  codellama_qlora_cra_3_ver_2_0.py
backend/: docker-compose.yml  main.py  pyproject.toml
backend/app/api/: auth.py  git.py  model.py  model_.py  redis_db.py  users.py  webhook.py
backend/app/config/: config.py
backend/app/helpers/: github_helper.py  secrets.py  verify_token.py
backend/app/helpers/user_helpers/: user_helpers.py
backend/app/schemas/: users_schema.py
frontend/: README.md  codereview.json  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js  test.jsx  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: BookmarkIcon.jsx  BotAvatar.jsx  ChatIcon.jsx  ChatInterface.jsx  CheckIcon.jsx  FolderIcon.jsx  LoginPage.jsx  MenuIcon.jsx  MoonIcon.jsx  MoreIcon.jsx  PlusIcon.jsx  SearchIcon.jsx  SendIcon.jsx  ShareIcon.jsx  Sidebar.jsx  SunIcon.jsx  UserAvatar.jsx  VoiceIcon.jsx
frontend/src/components/new/: AssignFolderModal.jsx  ChatHeader.jsx  ChatInput.jsx  ChatMessage.jsx  ChatWindow.jsx  FolderBar.jsx  Integrations.jsx  NewFolderModal.jsx  RenameChatModal.jsx  RenameFolderModal.jsx  Sidebar.jsx  Test.jsx  UserAvatar.jsx
frontend/src/hooks/: useChat.js  useTheme.js
frontend/src/services/: api.js
frontend/src/styles/: global.css
