[tool.poetry]
name = "code-review-assistant"
version = "0.1.0"
description = ""
authors = ["Harshyara"]
package-mode=false

[tool.poetry.dependencies] 
python = "^3.13"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
google-auth = "^2.38.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
